k8s/tools/wasigo-tools.yml
# 🐘 pgAdmin para PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: docker.io/dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
---
# ⚡ Redis Insight para Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:
        - name: redisinsight
          image: docker.io/redis/redisinsight:latest
          ports:
            - containerPort: 8001
          securityContext:
            runAsUser: 0
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: admin-tools-svc
  namespace: traefik
spec:
  selector:
    app: pgadmin
  ports:
    - name: pgadmin
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis-tools-svc
  namespace: traefik
spec:
  selector:
    app: redisinsight
  ports:
    - name: redisinsight
      port: 8081
      targetPort: 8001
